syntax = "proto3";

message Par_Row {
        repeated double elems = 1;
    }
message Param {
        repeated Par_Row par_rows= 1;
    }
message UniqueValues {
        repeated Param params= 1;
    }

message IterationOutput {
    repeated int32 allocations = 1;
    repeated UniqueValues uniquevalues = 2;
}

message ChainOutput {
    repeated IterationOutput chain = 1;
}
